# kernex

./: .gitmodules  CMakeLists.txt  README.md  limine.conf
cmake/: clang-toolchain.cmake  images.cmake
ext/: CMakeLists.txt
kernel/: CMakeLists.txt  linker.ld
kernel/inc/: libk.hpp
kernel/inc/boot/: limine.hpp
kernel/inc/drivers/: fb.hpp
kernel/src/: libk.cpp  main.cpp
kernel/src/boot/: limine.cpp
kernel/src/drivers/: fb.cpp
